Revision history for Math::Cephes

0.53    Nov 10, 2012
  - Fix the exporting of new_cmplx:
    - https://rt.cpan.org/Ticket/Display.html?id=80624

0.52    Nov 02, 2012
  - Change the author to a different account.
    - Done to try and avoid getting over report that the module "has no
    active maintainer").

0.51    Oct 23, 2012
  - Fix the auto-generation of META.yml/META.json.
    - There was a NO_META in the Makefile.PL (WTF?), which preserved
    the existing META.

0.50    Oct 23, 2012
  - New version to get over a CPAN/PAUSE's SNAFU.
    - The CPAN clients don't install the right version.
    - Thanks to aero for the report, and John M. Gamble and Steffen
    Mueller for some insights.

0.48    Jul 14, 2012
  - Apply patch to Makefile.PL to fix builds on x86-64 Macintosh:
    - https://rt.cpan.org/Ticket/Display.html?id=75730
    - Thanks to Ian Barton for the report and the patch.
  - Update lib/Math/Cephes.pod with up-to-date information.

0.47    Jan 6, 2009
  - dmake requires creation of dummy libmd file (reported by Sisyphus)

0.46    Jan 2, 2009
  - Intel Mac support (dsteinbrunner):
      http://rt.cpan.org/Public/Bug/Display.html?id=25842
  - support for building on cygwin (patch supplied by Sisyphus)
  - remove LIBS from Makefile.PL, so as not to require creation of dummy
    libmd library, which causes problems on some platforms:
      https://rt.cpan.org/Ticket/Display.html?id=19716
  - don't run test 36 of t/poly.t, which seems to fail consistently
    on some platforms:
      http://cpantesters.perl.org/show/Math-Cephes.html

0.45    July 26, 2007
  - fix bug in Math::Cephes::Complex to allow 0 as a value
    (thanks to Dan Connelly)

0.44    Apr 7, 2007
  - allow Darwin to use default config for Mac OSX 10 (Chip Stewart)

0.43    June 17, 2006
  - add lgam to list of functions in "gammas" tag
    (spotted by Philip Lijnzaad)
  - allow clr() method of Math::Cephes::Matrix to accept
    a value to set all matrix elements equal to