@@ -145,6 +145,7 @@ t/gammas.t
 t/hypergeometrics.t
 t/hypers.t
 t/new_cmplx.t
+t/new_cmplx-2.t
 t/misc.t
 t/trig.t
 t/utils.t
